--- a/wpf_ui/appsettings.json
+++ b/wpf_ui/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=toy-shop-db.mssql.somee.com;Initial Catalog=toy-shop-db;User ID=mk19_SQLLogin_1;Password=********;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=toystore_db;Integrated Security=True;",
   }
 }
