add:wpf ui without commands

--- a/wpf_ui/appsettings.json
+++ b/wpf_ui/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=toystore_db;Integrated Security=True;",
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=toystore_db;Integrated Security=True;"
   }
 }
