--- a/BuisnessLogic/BuisnessLogic.csproj
+++ b/BuisnessLogic/BuisnessLogic.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\entities\entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
